# ai-hub

./: README.md  next.config.ts  package-lock.json  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/_components/section/: FAQ.tsx  Feature.tsx  Hero.tsx
src/app/about/: page.tsx
src/app/chat/: page.tsx
src/app/chat/_components/: ChatInput.tsx  ChatMessages.tsx  ChatSidebar.tsx  ProjectView.tsx
src/app/get-started/: page.tsx
src/app/privacy/: page.tsx
src/app/prompts/: page.tsx
src/app/terms/: page.tsx
src/app/tools/: page.tsx
src/app/tools/_components/: Tips.tsx  ToolsPage.tsx
src/components/: ApiKey.tsx  ApiStatus.tsx  AppearanceSettings.tsx  Contribution.tsx  Footer.tsx  Navbar.tsx  OllamaSettings.tsx  Settings.tsx
src/components/ui/: custom-dialog.tsx
src/lib/: api-client.test.ts  api-client.ts  utils.ts
src/types/: api-client.ts  chat.ts
